# TitanPlayer

./: .gitignore  CMakeLists.txt  Main.qml  build-debug.bat  main.cpp  readme.md  resources.qrc
core/: audio_output.cpp  audio_output.h  ffmpeg_player.cpp  ffmpeg_player.h  player_controller.cpp  player_controller.h  video_frame_queue.h
qml/: ControlBar.qml  IconButton.qml  PlaylistPanel.qml  SettingsDialog.qml  SpeedPopup.qml  TitleBar.qml  VideoArea.qml  VolumePopup.qml
render/: video_frame_source.cpp  video_frame_source.h  video_output_item.cpp  video_output_item.h
